<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.talkerbanda.viewmodel.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".home.HomeFragment">

        <ImageView
            android:id="@+id/user_photo"
            android:layout_width="375dp"
            android:layout_height="607dp"
            android:background="@drawable/rounded_background"
            android:contentDescription="@string/ВВВВВ"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            custom:src="@{viewModel.userPhoto}"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="11dp" />


        <TextView
            android:id="@+id/user_description"
            android:layout_width="307dp"
            android:layout_height="134dp"
            android:layout_marginTop="352dp"
            android:background="@drawable/rounded_corner_background"
            android:padding="16dp"
            android:text="@{viewModel.userDescription}"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/like_dislike_buttons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.165"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:id="@+id/like_dislike_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp">

        </LinearLayout>

        <ImageButton
            android:id="@+id/button_dislike"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginTop="516dp"
            android:layout_weight="1"
            android:background="@drawable/circle_background"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/jobbb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.356"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/button_like"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="516dp"
            android:layout_weight="1"
            android:background="@drawable/circle_background"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/ввв"
            android:scaleType="fitCenter"
            android:src="@drawable/fotor"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/button_dislike"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>







